--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-	"name": "figma-plugin-svelte-vite",
+	"name": "figma-handoff",
 	"private": true,
 	"version": "1.0.0",
-	"description": "Create Figma plugins with Svelte + Vite + TypeScript",
+	"description": "Handoff designs to developers with ease",
 	"homepage": "https://www.github.com/the-dataface/figma-plugin-svelte-vite",
 	"repository": {
 		"type": "git",
@@ -51,6 +51,8 @@
 		"@types/node": "^20.10.5",
 		"concurrently": "^8.2.2",
 		"d3-color": "^3.1.0",
+		"jszip": "^3.10.1",
+		"slugify": "^1.6.6",
 		"svelte": "^4.2.8",
 		"svelte-check": "^3.6.2",
 		"svelte-feather-icons": "^4.1.0",
