--- a/package.json
+++ b/package.json
@@ -48,8 +48,10 @@
 		"@floating-ui/dom": "^1.5.3",
 		"@sveltejs/vite-plugin-svelte": "^3.0.1",
 		"@tsconfig/svelte": "^5.0.2",
+		"@types/d3": "^7.4.3",
 		"@types/node": "^20.10.5",
 		"concurrently": "^8.2.2",
+		"d3": "^7.8.5",
 		"d3-color": "^3.1.0",
 		"jszip": "^3.10.1",
 		"slugify": "^1.6.6",
