--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
 		"check": "svelte-check --tsconfig ./tsconfig.json"
 	},
 	"devDependencies": {
-		"@figma/plugin-typings": "^1.93.0",
+		"@figma/plugin-typings": "*",
 		"@floating-ui/dom": "^1.6.5",
 		"@sveltejs/vite-plugin-svelte": "^3.1.0",
 		"@tsconfig/svelte": "^5.0.4",
